--- a/app/templates/classes/editClass.html
+++ b/app/templates/classes/editClass.html
@@ -4,17 +4,19 @@
     {{ title }}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
-    <div class="middle">
-      <div class="inner">
-        <div class="center">
-            <h1>{{ title }}</h1>
-            <br/>
-            {{ wtf.quick_form(form) }}
+    <div class="outer">
+        <div class="middle">
+            <div class="center">
+                <div class="page-header">
+                    <h1>
+                        {{ title }}
+                        <br>
+                        <small>{{ class_name }}</small>
+                    </h1>
+                </div>
+                {{ wtf.quick_form(form) }}
+                <br>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
-</div>
 {% endblock %}
