--- a/app/templates/admin/parent_to_student/list.html
+++ b/app/templates/admin/parent_to_student/list.html
@@ -3,72 +3,67 @@
     Parent-Student
 {% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
-          <h1 style="text-align:center;">Parent-Student relationship</h1>
-          <hr class="intro-divider">
+        <div class="center">
+            <div class="page-header">
+                <h1>Parent-Student relationship</h1>
+            </div>
 
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_parent_to_student') }}" class="btn btn-default btn-lg">
-                  <i class="fa fa-plus"></i> Add parent-student relationship
-              </a>
-          </div>
+            <div style="text-align: center">
+                <a href="{{ url_for('admin.add_parent_to_student') }}" class="btn btn-default btn-lg">
+                    <i class="fa fa-plus"></i> Add parent-student relationship
+                </a>
+            </div>
 
-          {% if parent_to_student %}
-          <div class="center">
+            {% if parent_to_student %}
             <table class="table table-striped table-bordered">
-              <thead>
-              <tr>
-                  <th width="35%"> Parent </th>
-                  <th width="35%"> Student </th>
-                  <th width="15%"> Bind </th>
-                  <th width="15%"> Unbind </th>
-              </tr>
-              </thead>
-              <tbody>
-              {% for parent_student in parent_to_student %}
-                  <tr>
-                      <td>
-                          <a href="{{ url_for('home.parent_dashboard', id=parent_student.parentStudent.id) }}">
-                              {{ parent_student.parentStudent }}
-                          </a>
-                      </td>
-                      <td>
-                          <a href="{{ url_for('home.student_dashboard', id=parent_student.studentParent.id) }}">
-                              {{ parent_student.studentParent }}
-                          </a>
-                      </td>
-                      <td>
-                          <a href="{{ url_for('admin.edit_parent_to_student', id=parent_student.parentStudent.id) }}">
-                              <i class="fa fa-chain"></i> change bind
-                          </a>
-                      </td>
-                      <td>
-                          <a href="{{ url_for('admin.delete_parent_to_student', id=parent_student.id) }}">
-                              <i class="fa fa-chain-broken"></i> remove bind
-                          </a>
-                      </td>
-                  </tr>
-              {% endfor %}
-              </tbody>
+                <thead>
+                <tr>
+                    <th width="35%"> Parent </th>
+                    <th width="35%"> Student </th>
+                    <th width="15%"> Bind </th>
+                    <th width="15%"> Unbind </th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for parent_student in parent_to_student %}
+                    <tr>
+                        <td>
+                            <a href="{{ url_for('home.parent_dashboard', id=parent_student.parentStudent.id) }}">
+                                {{ parent_student.parentStudent }}
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ url_for('home.student_dashboard', id=parent_student.studentParent.id) }}">
+                                {{ parent_student.studentParent }}
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ url_for('admin.edit_parent_to_student', id=parent_student.parentStudent.id) }}">
+                                <i class="fa fa-chain"></i> change bind
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ url_for('admin.delete_parent_to_student', id=parent_student.id) }}">
+                                <i class="fa fa-chain-broken"></i> remove bind
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
             </table>
-          </div>
+            {% else %}
+                <div class="alert alert-warning" role="alert">No parent-student relationship.</div>
+            {% endif %}
 
-          {% else %}
-          <div style="text-align: center">
-              <h3> No parent-student relationship. </h3>
-          </div>
-          {% endif %}
-
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_parent_to_student') }}" class="btn btn-default btn-lg">
-                  <i class="fa fa-plus"></i> Add parent-student relationship
-              </a>
-          </div>
+            <div style="text-align: center">
+                <a href="{{ url_for('admin.add_parent_to_student') }}" class="btn btn-default btn-lg">
+                    <i class="fa fa-plus"></i> Add parent-student relationship
+                </a>
+            </div>
+            <br>
       </div>
     </div>
-  </div>
 </div>
 {% endblock %}
