--- a/app/templates/admin/room_specializations/room_specializations.html
+++ b/app/templates/admin/room_specializations/room_specializations.html
@@ -1,65 +1,63 @@
 {% extends "base.html" %}
 {% block title %}Room Specialization{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
-    <div class="middle">
-      <div class="inner">
-          <h1 style="text-align:center;">Room Specialization</h1>
-          <hr class="intro-divider">
+    <div class="outer">
+        <div class="middle">
+            <div class="center">
+                <div class="page-header">
+                    <h1>Room Specialization</h1>
+                </div>
 
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_room_specialization') }}" class="btn btn-default btn-lg">
-                  <i class="fa fa-plus"></i> Add Room Specialization
-              </a>
-          </div>
+                <div style="text-align: center">
+                    <a href="{{ url_for('admin.add_room_specialization') }}" class="btn btn-default btn-lg">
+                        <i class="fa fa-plus"></i> Add Room Specialization
+                    </a>
+                </div>
 
-          {% if room_specializations %}
-          <div class="center">
-              <table class="table table-striped table-bordered">
-                  <thead>
-                  <tr>
-                      <th width="10%"> ID </th>
-                      <th width="50%"> Name </th>
-                      <th width="10%"> Rooms Count </th>
-                      <th width="15%"> Edit </th>
-                      <th width="15%"> Delete </th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  {% for room_specialization in room_specializations %}
-                  <tr>
-                      <td> {{ room_specialization.id }} </td>
-                      <td> {{ room_specialization.name }} </td>
-                      <td> {{ room_specialization.room_specialization_id.count() }} </td>
-                      <td>
-                          <a href="{{ url_for('admin.edit_room_specialization', id=room_specialization.id) }}">
-                              <i class="fa fa-pencil"></i> Edit
-                          </a>
-                      </td>
-                      <td>
-                          <a href="{{ url_for('admin.delete_room_specialization', id=room_specialization.id) }}">
-                              <i class="fa fa-trash"></i> Delete
-                          </a>
-                      </td>
-                  </tr>
-                  {% endfor %}
-                  </tbody>
-              </table>
-          </div>
-          {% else %}
-          <div style="text-align: center">
-              <h3> No room specialization have been added. </h3>
-          </div>
-          {% endif %}
+                {% if room_specializations %}
 
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_room_specialization') }}" class="btn btn-default btn-lg">
-                <i class="fa fa-plus"></i> Add Room Specialization
-              </a>
-          </div>
-      </div>
+                    <table class="table table-striped table-bordered">
+                        <thead>
+                        <tr>
+                            <th width="10%"> ID</th>
+                            <th width="50%"> Name</th>
+                            <th width="10%"> Rooms Count</th>
+                            <th width="15%"> Edit</th>
+                            <th width="15%"> Delete</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        {% for room_specialization in room_specializations %}
+                            <tr>
+                                <td> {{ room_specialization.id }} </td>
+                                <td> {{ room_specialization.name }} </td>
+                                <td> {{ room_specialization.room_specialization_id.count() }} </td>
+                                <td>
+                                    <a href="{{ url_for('admin.edit_room_specialization', id=room_specialization.id) }}">
+                                        <i class="fa fa-pencil"></i> Edit
+                                    </a>
+                                </td>
+                                <td>
+                                    <a href="{{ url_for('admin.delete_room_specialization', id=room_specialization.id) }}">
+                                        <i class="fa fa-trash"></i> Delete
+                                    </a>
+                                </td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+
+                {% else %}
+                    <div class="alert alert-warning" role="alert">No room specialization have been added.</div>
+                {% endif %}
+
+                <div style="text-align: center">
+                    <a href="{{ url_for('admin.add_room_specialization') }}" class="btn btn-default btn-lg">
+                        <i class="fa fa-plus"></i> Add Room Specialization
+                    </a>
+                </div>
+                <br>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
