--- a/app/templates/admin/students/edit.html
+++ b/app/templates/admin/students/edit.html
@@ -4,20 +4,23 @@
     {{ title }}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
         <div class="center">
-            <h1> {{ title }} </h1>
-            {% if edit_student_to_class %}
-                <h2>{{ student }}</h2>
-            {% endif %}
-            <br/>
+            <div class="page-header">
+                <h1>
+                    {{ title }}
+                    <br>
+                    <small>Student -
+                        <a href="{{ url_for('home.student_dashboard',id=student.id) }}">
+                            {{ student }}
+                        </a>
+                    </small>
+                </h1>
+            </div>
             {{ wtf.quick_form(form) }}
+            <br/>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {% endblock %}
