--- a/app/templates/admin/students/list.html
+++ b/app/templates/admin/students/list.html
@@ -3,74 +3,55 @@
     Student-Class
 {% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
+        <div class="center">
+            <div class="page-header">
+                <h1> Student-Class relationship </h1>
+            </div>
 
-          <h1 style="text-align:center;">Student-Class relationship</h1>
-          <hr class="intro-divider">
-
-          {% if students %}
-              <div class="center">
-                  <table class="table table-striped table-bordered">
-                  <thead>
-                      <tr>
-                          <th width="50%"> Student </th>
-                          <th width="20%"> Class </th>
-                          <th width="15%"> Bind </th>
-                          <th width="15%"> Unbind </th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                  {% for student in students %}
-                  <tr>
-                      <td>
-                          <a href="{{ url_for('home.student_dashboard',id=student.id) }}">
-                              {{ student }}
-                          </a>
-                      </td>
-                      <td>
-                          {% if student.studentInClass.first().classes%}
-                              <a href="{{ url_for('classes.one_class', class_id=student.studentInClass.first().classes.id) }}">
-                                  {{ student.studentInClass.first().classes }}
-                              </a>
-                          {% else %}
-                              not linked
-                          {% endif %}
-                      </td>
-                      <td>
-                          {% if student.studentInClass.first().classes%}
-                              <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
-                                  <i class="fa fa-link"></i> change bind
-                              </a>
-                          {% else %}
-                              <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
-                                  <i class="fa fa-chain"></i> add link
-                              </a>
-                          {% endif %}
-                      </td>
-                      <td>
-                          {% if student.studentInClass.first().classes%}
-                              <a href="{{ url_for('admin.delete_students_class', id=student.id) }}">
-                                  <i class="fa fa-chain-broken"></i> remove bind
-                              </a>
-                          {% else %}
-                              not linked
-                          {% endif %}
-                      </td>
-                  </tr>
-                  {% endfor %}
-                  </tbody>
-                </table>
-              </div>
-          {% else %}
-              <div style="text-align: center">
-                  <h3> No students. </h3>
-              </div>
-          {% endif %}
-      </div>
+            {% if students %}
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th width="70%"> Student </th>
+                    <th width="30%"> Class </th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for student in students %}
+                    <tr>
+                        <td>
+                            <a href="{{ url_for('home.student_dashboard',id=student.id) }}">
+                                {{ student }}
+                            </a>
+                        </td>
+                        <td>
+                            {% if student.studentInClass.first().classes%}
+                            <a href="{{ url_for('admin.edit_students_class', id=student.id) }}">
+                                <i class="fa fa-link"></i> change bind
+                            </a><br>
+                            <a href="{{ url_for('classes.one_class', class_id=student.studentInClass.first().classes.id) }}">
+                                {{ student.studentInClass.first().classes }}
+                            </a><br>
+                            <a href="{{ url_for('admin.delete_students_class', id=student.id) }}">
+                                <i class="fa fa-chain-broken"></i> remove bind
+                            </a>
+                            {% else %}
+                             <a href="{{ url_for('admin.add_students_class', id=student.id) }}">
+                                 <i class="fa fa-chain"></i> add link
+                             </a>
+                            {% endif %}
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+                <div class="alert alert-warning" role="alert">No students.</div>
+            {% endif %}
+        <br>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
