--- a/app/templates/admin/subjects/edit.html
+++ b/app/templates/admin/subjects/edit.html
@@ -4,17 +4,22 @@
     {{ title }}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
         <div class="center">
-            <h1> {{ title }} </h1>
-            <br/>
+            <div class="page-header">
+                <h1>
+                    {{ title }}
+                    {% if subject_name %}
+                        <br>
+                        <small>{{ subject_name }}</small>
+                    {% endif %}
+                </h1>
+            </div>
             {{ wtf.quick_form(form) }}
+            <br/>
         </div>
       </div>
     </div>
-  </div>
 </div>
 {% endblock %}
