--- a/app/templates/admin/subjects/list.html
+++ b/app/templates/admin/subjects/list.html
@@ -1,66 +1,59 @@
 {% extends "base.html" %}
-{% block title %}Subjects{% endblock %}
+{% block title %} Subjects {% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
-          <h1 style="text-align:center;">Subjects</h1>
-          <hr class="intro-divider">
+        <div class="center">
+            <div class="page-header">
+                <h1> Subjects </h1>
+            </div>
+            <div style="text-align: center">
+                <a href="{{ url_for('admin.add_subject') }}" class="btn btn-default btn-lg">
+                    <i class="fa fa-plus"></i> Add Subject
+                </a>
+            </div>
 
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_subject') }}" class="btn btn-default btn-lg">
-                <i class="fa fa-plus"></i> Add Subject
-              </a>
-          </div>
+            {% if subjects %}
+            <table class="table table-striped table-bordered">
+                <thead>
+                <tr>
+                    <th width="10%"> ID </th>
+                    <th width="50%"> Name </th>
+                    <th width="10%"> Teacher Count </th>
+                    <th width="15%"> Edit </th>
+                    <th width="15%"> Delete </th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for subject in subjects %}
+                    <tr>
+                        <td> {{ subject.id }} </td>
+                        <td> {{ subject.name }} </td>
+                        <td> {{ subject.teacher_subject_id.count() }} </td>
+                        <td>
+                            <a href="{{ url_for('admin.edit_subject', id=subject.id) }}">
+                                <i class="fa fa-pencil"></i> edit
+                            </a>
+                        </td>
+                        <td>
+                            <a href="{{ url_for('admin.delete_subject', id=subject.id) }}">
+                                <i class="fa fa-trash"></i> delete
+                            </a>
+                        </td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+            {% else %}
+                <div class="alert alert-warning" role="alert">No subjects have been added.</div>
+            {% endif %}
 
-          {% if subjects %}
-          <div class="center">
-              <table class="table table-striped table-bordered">
-                  <thead>
-                  <tr>
-                      <th width="10%"> ID </th>
-                      <th width="50%"> Name </th>
-                      <th width="10%"> Teacher Count </th>
-                      <th width="15%"> Edit </th>
-                      <th width="15%"> Delete </th>
-                  </tr>
-                  </thead>
-                  <tbody>
-                  {% for subject in subjects %}
-                  <tr>
-                      <td> {{ subject.id }} </td>
-                      <td> {{ subject.name }} </td>
-                      <td> {{ subject.teacher_subject_id.count() }} </td>
-                      <td>
-                          <a href="{{ url_for('admin.edit_subject', id=subject.id) }}">
-                              <i class="fa fa-pencil"></i> edit
-                          </a>
-                      </td>
-                      <td>
-                          <a href="{{ url_for('admin.delete_subject', id=subject.id) }}">
-                              <i class="fa fa-trash"></i> delete
-                          </a>
-                      </td>
-                  </tr>
-                  {% endfor %}
-                  </tbody>
-              </table>
-          </div>
-          {% else %}
-          <div style="text-align: center">
-              <h3> No subjects have been added. </h3>
-          </div>
-          {% endif %}
-
-          <div style="text-align: center">
-              <a href="{{ url_for('admin.add_subject') }}" class="btn btn-default btn-lg">
-                <i class="fa fa-plus"></i> Add Subject
-              </a>
-          </div>
-
-      </div>
+            <div style="text-align: center">
+                <a href="{{ url_for('admin.add_subject') }}" class="btn btn-default btn-lg">
+                    <i class="fa fa-plus"></i> Add Subject
+                </a>
+            </div>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
