--- a/app/templates/admin/teachers/subjects.html
+++ b/app/templates/admin/teachers/subjects.html
@@ -3,62 +3,56 @@
     Teacher subjects
 {% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
+        <div class="center">
+            <div class="page-header">
+                <h1>
+                    Edit the list of teacher subjects <br>
+                    <small>Teacher -
+                        <a href="{{ url_for('home.teacher_dashboard',id=teacher.id) }}">
+                            {{ teacher }}
+                        </a>
+                    </small>
+                </h1>
+            </div>
 
-          <h1 style="text-align:center;">Teacher subjects</h1>
-          <h2 style="text-align:center;">
-              <a href="{{ url_for('home.teacher_dashboard',id=teacher.id) }}">
-                  {{ teacher }}
-              </a>
-          </h2>
-          <hr class="intro-divider">
+            {% if teacher %}
+                <div style="text-align: center">
+                    <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}" class="btn btn-default btn-lg">
+                        <i class="fa fa-plus"></i> Add Subject
+                    </a>
+                </div>
 
-          {% if teacher %}
-              <div style="text-align: center">
-                  <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}" class="btn btn-default btn-lg">
-                      <i class="fa fa-plus"></i> Add Subject
-                  </a>
-              </div>
-
-              <div class="center">
-                  <table class="table table-striped table-bordered">
-                  <thead>
-                      <tr>
-                          <th width="25%"> Subject </th>
-                          <th width="25%"> Delete </th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                  {% for subject in teacher.teacherToSubject.all() %}
-                  <tr>
-                      <td> {{ subject.subjects.name }} </td>
-                      <td>
-                          <a href="{{ url_for('admin.delete_teacher_subjects', id_subject = subject.subjects.id, id_teacher=teacher.id) }}">
-                              <i class="fa fa-trach"></i> delete subject
-                          </a>
-                      </td>
-                  </tr>
-                  {% endfor %}
-                  </tbody>
+                <table class="table table-striped table-bordered">
+                    <thead>
+                    <tr>
+                        <th width="25%"> Subject </th>
+                        <th width="25%"> Delete </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    {% for subject in teacher.teacherToSubject.all() %}
+                    <tr>
+                        <td> {{ subject.subjects }} </td>
+                        <td>
+                            <a href="{{ url_for('admin.delete_teacher_subjects', id_subject = subject.subjects.id, id_teacher=teacher.id) }}">
+                                <i class="fa fa-trach"></i> delete subject
+                            </a>
+                        </td>
+                    </tr>
+                    {% endfor %}
+                    </tbody>
                 </table>
-              </div>
 
-              <div style="text-align: center">
-                  <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}" class="btn btn-default btn-lg">
-                      <i class="fa fa-plus"></i> Add Subject
-                  </a>
-              </div>
-          {% else %}
-              <div style="text-align: center">
-                  <h3> No teacher. </h3>
-              </div>
-          {% endif %}
-
-      </div>
+                <div style="text-align: center">
+                    <a href="{{ url_for('admin.add_teacher_subjects', id_teacher=teacher.id) }}" class="btn btn-default btn-lg">
+                        <i class="fa fa-plus"></i> Add Subject
+                    </a>
+                </div>
+            {% endif %}
+            <br>
+        </div>
     </div>
-  </div>
 </div>
 {% endblock %}
