--- a/app/templates/admin/users/user.html
+++ b/app/templates/admin/users/user.html
@@ -1,28 +1,28 @@
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}
-    {{ title }}
+    {% if add_user %}
+        Add User
+    {% else %}
+        Edit User
+    {% endif %}
 {% endblock %}
 {% block body %}
-<div class="content-section">
- <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
         <div class="center">
-            {% if add_user %}
-            <h1> Add User </h1>
-            {% else %}
-            <h1> Edit User
-                <span style="color: #aec251;">
-                    "{{ user.first_name }} {{ user.last_name }}"
-                </span>
-            </h1>
-            {% endif %}
-            <br/>
+            <div class="page-header">
+                <h1>
+                {% if add_user %}
+                    Add User
+                {% else %}
+                    Edit User
+                {% endif %}
+                </h1>
+            </div>
             {{ wtf.quick_form(form) }}
+            <br>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {% endblock %}
