--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,16 +1,14 @@
-{#{% import "bootstrap/utils.html" as utils %}#}
 {% import "bootstrap/wtf.html" as wtf %}
 {% extends "base.html" %}
 {% block title %}Login{% endblock %}
 {% block body %}
-<div class="content-section">
-{#    <br/>#}
-{#    {{ utils.flashed_messages() }}#}
-{#    <br/>#}
+<div class="outer">
     <div class="center">
-        <h1>Login to your account</h1>
-        <br/>
+        <div class="page-header">
+            <h1>Login to your account</h1>
+        </div>
         {{ wtf.quick_form(form) }}
+        <br/>
     </div>
 </div>
 {% endblock %}
