--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,11 +2,13 @@
 {% extends "base.html" %}
 {% block title %}Register{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="center">
-    <h1>Register for an account</h1>
-    <br/>
-    {{ wtf.quick_form(form) }}
-  </div>
+<div class="outer">
+    <div class="center">
+        <div class="page-header">
+            <h1>Register for an account</h1>
+        </div>
+        {{ wtf.quick_form(form) }}
+        <br/>
+    </div>
 </div>
 {% endblock %}
