--- a/app/templates/errors/403.html
+++ b/app/templates/errors/403.html
@@ -1,21 +1,22 @@
 {% extends "base.html" %}
 {% block title %}{{ title }}{% endblock %}
 {% block body %}
-<div class="content-section">
-  <div class="outer">
+<div class="outer">
     <div class="middle">
-      <div class="inner">
-        <div style="text-align: center">
-            <h1> 403 Error </h1>
-            <h3> You do not have sufficient permissions to access this page. </h3>
-            <hr class="intro-divider">
+        <div class="center">
+            <div class="page-header">
+                <h1>
+                    403 Error
+                    <br>
+                    <small>
+                        You do not have sufficient permissions to access this page.
+                    </small>
+                </h1>
+            </div>
             <a href="{{ url_for('home.homepage') }}" class="btn btn-default btn-lg">
-                <i class="fa fa-home"></i>
-                Home
+                <i class="fa fa-home"></i> Home
             </a>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {% endblock %}
