--- a/app/templates/home/teacher_dashboard.html
+++ b/app/templates/home/teacher_dashboard.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
-{% block title %}
-    Teacher
-{% endblock %}
+{% block title %} Teacher {% endblock %}
 {% block body %}
-<div class="content-section">
+<div class="outer">
     <div class="center">
-        <a href="{{ url_for('home.teacher_dashboard', id=user.id) }}">
-            <h2>{{ user.first_name }} {{ user.last_name }} {{ user.middle_name }}</h2>
-        </a>
+        <div class="page-header">
+            <h1>
+                {{ user.last_name }} {{ user.first_name }} {{ user.middle_name }}
+                <small>(teacher)</small>
+            </h1>
+        </div>
         <div>email: {{ user.email }}</div>
         <div>Tell:
             {% if user.tel != "" %}
@@ -28,13 +29,22 @@
             no classrooms
         {% endif %}
         </div>
-        <hr>
-        <div>Subjects: </div>
-        {% for subject in subjects %}
-            <div>
-                {{ subject.subjects.name }}
+
+        <br>
+        {% if subjects %}
+            <div class="panel panel-default">
+                <div class="panel-heading">Subjects:</div>
+                <ul class="list-group">
+                    {% for subject in subjects %}
+                        <li class="list-group-item">
+                            {{ subject.subjects.name }}
+                        </li>
+                    {% endfor %}
+                </ul>
             </div>
-        {% endfor %}
+        {% else %}
+            <div class="alert alert-warning" role="alert">No subjects</div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
