Added FLASH messages

--- a/app/templates/admin/parent_to_student/edit.html
+++ b/app/templates/admin/parent_to_student/edit.html
@@ -9,7 +9,7 @@
         <div class="center">
             <div class="page-header">
                 <h1> {{ title }}
-                {% if not add_parent_to_student %}
+                {% if parent_to_student %}
                     <br>
                     <small>Parent -
                     <a href="{{ url_for('home.parent_dashboard',id=parent_to_student.parentStudent.id) }}">
