--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,7 +9,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 </head>
 <body>
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container-fluid">
         <iv class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse"
@@ -55,11 +55,30 @@
         </div>
     </div>
 </nav>
-<div class="wrapper">
+<br>
+<br>
+<div class="center-block">
+    <div>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                {% if category == 'message' %}
+                    <div class="alert alert-success" role="alert">
+                {% elif category == 'warning' %}
+                    <div class="alert alert-warning" role="alert">
+                {% else %}
+                    <div class="alert alert-danger" role="alert">
+                {% endif %}
+            {{ message }}
+            </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
+    </div>
     {% block body %}
     {% endblock %}
-    <div class="push"></div>
 </div>
+<br>
 <footer>
     <div class="container">
         <div class="row">
