ADD Schedule PAGE v0.1

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -25,6 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 {% if current_user.is_authenticated %}
                     {% if current_user.is_admin %}
+                        <li><a href="{{ url_for('admin.list_schedule') }}">Schedule</a></li>
                         <li><a href="{{ url_for('admin.list_plan') }}">Plans</a></li>
                         <li><a href="{{ url_for('admin.list_teachers_info') }}">Teachers</a></li>
                         <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
@@ -84,6 +85,7 @@
                 <ul class="list-inline">
                     {% if current_user.is_authenticated %}
                         {% if current_user.is_admin %}
+                            <li><a href="{{ url_for('admin.list_schedule') }}">Schedule</a></li>
                             <li><a href="{{ url_for('admin.list_plan') }}">Plans</a></li>
                             <li><a href="{{ url_for('admin.list_teachers_info') }}">Teachers</a></li>
                             <li><a href="{{ url_for('admin.list_students_class') }}">Students</a></li>
